Fix css style inconsistencies on mobile

--- a/src/Pages/PostAnAd/PostAnAd.scss
+++ b/src/Pages/PostAnAd/PostAnAd.scss
@@ -43,12 +43,14 @@
 					font-size: 16px;
 					min-height: 40px;
 					box-sizing: border-box;
+					color: black;
 				}
 
 				.dropdown:hover {
 					cursor: pointer;
 				}
 				.dropdown {
+					color: black;
 					border: 1px solid #93939a;
 					border-radius: 24px;
 					background-color: white;
@@ -64,9 +66,14 @@
 					cursor: pointer;
 				}
 				#image {
-					line-height: 40px;
+					// removes default styling in mobile overriding css
+					-webkit-appearance: none;
+					appearance: none;
+
+					padding: 8px;
 					width: 240px;
 					background-color: white;
+					color: black;
 				}
 				#image:hover,
 				input[type='file'] {
@@ -94,20 +101,46 @@
 
 .user-ads {
 	background-color: #efefef;
-	.ad {
-		display: flex;
-		align-items: center;
-		gap: 20px;
-		img {
-			width: 150px;
-			height: auto;
-			object-fit: cover;
-		}
+	display: flex;
+	flex-direction: column;
 
-		button {
-			margin-left: auto;
-			width: 35px;
-			height: 35px;
+	.ads {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 10px;
+
+		.ad {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			align-items: center;
+			overflow: hidden;
+			width: 260px;
+			height: 250px;
+			padding: 25px;
+			border: 1px solid gray;
+			box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+
+			img {
+				width: 150px;
+				height: auto;
+				object-fit: cover;
+			}
+
+			h2 {
+				// ellipsis on 2nd line
+				overflow: hidden;
+				text-overflow: ellipsis;
+				display: -webkit-box;
+				-webkit-line-clamp: 2;
+				-webkit-box-orient: vertical;
+			}
+
+			button {
+				border-radius: 0;
+				width: 100%;
+				height: 35px;
+			}
 		}
 	}
 }
