--- a/src/components/CallToAction/callToAction.scss
+++ b/src/components/CallToAction/callToAction.scss
@@ -92,6 +92,9 @@
 		opacity: 1;
 		transition: all 0s !important;
 	}
+	> button {
+		color: black;
+	}
 }
 
 .CallToActionF {
